--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
   },
   "license": "ISC",
   "dependencies": {
-    "@nestjs/common": "^10.x",
-    "@nestjs/core": "^10.x",
-    "@nestjs/platform-express": "^10.x",
+    "@nestjs/common": "^11.1.14",
+    "@nestjs/core": "^11.1.14",
+    "@nestjs/platform-express": "^11.1.14",
     "class-transformer": "^0.5.1",
-    "class-validator": "^0.14.1",
+    "class-validator": "^0.15.1",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.2",
+    "tslib": "^2.8.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^11.0.16",
@@ -38,12 +39,5 @@
     "ts-node": "^10.x",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.x"
-  },
-  "dependencies": {
-    "@nestjs/common": "^11.1.14",
-    "@nestjs/core": "^11.1.14",
-    "@nestjs/platform-express": "^11.1.14",
-    "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.2"
   }
 }
